--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     </style>
 </head>
 <body>
-    <marquee>Witaj na stronie Igora Grabowskiego!</marquee>
+    <marquee>Witaj na stronie!</marquee>
+    <marquee>szpont!</marquee>
     <header>
         <h1>Igor Grabowski - Wizjoner Przyszłości</h1>
     </header>
