--- a/index.html
+++ b/index.html
@@ -65,17 +65,11 @@
         marquee {
             color: #ffff00;
             font-weight: bold;
-        }  
-          marquee2 {
-            color: #14A3C7;
-            font-weight: bold;
-            animation: blink 1s infinite;
         }
     </style>
 </head>
 <body>
-    <marquee>Witaj na stronie!</marquee>
-    <marquee2>szpont!</marquee2>
+    <marquee>Witaj na szponcie!</marquee>
     <header>
         <h1>Igor Grabowski - Wizjoner Przyszłości</h1>
     </header>
